# ft_linear_regression

./: README.md  pyproject.toml  requirements.txt
dataset/: data.csv
src/: data_visualisation.py  describe.py  linear_function.py  parse_data.py  plot.py  predict.py  train.py  utils.py
