[tool.poetry]
name = "ft-linear-regression"
version = "0.1.0"
description = ""
authors = ["macrespo42 <macrespo@student.42.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
